--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 $font-family-sans-serif : 'Red Hat Display', sans-serif;
 
+$border-radius : 20px;
 $body-bg : hsl(225, 100%, 94%);
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
@@ -9,4 +10,8 @@ body{
     background-image: url("../images/pattern-background-desktop.svg");
     background-repeat: no-repeat;
     background-size: 100% 50vh;
+}
+
+.one{
+    border-radius: 10px;
 }
