--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 $font-family-sans-serif : 'Red Hat Display', sans-serif;
 
+$primary : hsl(245, 75%, 52%);
 $border-radius : 20px;
 $body-bg : hsl(225, 100%, 94%);
+$btn-border-radius-lg : 10px;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -14,4 +16,17 @@ body{
 
 .one{
     border-radius: 10px;
+}
+a{
+    color: $primary;
+}
+a:hover{
+    color: hsla(245, 75%, 52%, 0.418);
+}
+.btn-primary{
+    --bs-btn-hover-bg: hsla(245, 75%, 52%, 0.418);
+}
+.cancel{
+    background-color: transparent;
+    color: hsl(224, 23%, 55%);
 }
